Refactoring of DSS and Definition, for performance