@@ -13,23 +13,25 @@
  * implied. See the License for the specific language governing 
  * permissions and limitations under the License.
  */
-package org.openntf.xpt.core.dss.binding;
+package org.openntf.xpt.core.dss.binding.field;
 
 import java.lang.reflect.Method;
-import java.util.HashMap;
-
-import org.openntf.xpt.core.base.BaseIntegerBinder;
+import java.util.Vector;
 
 import lotus.domino.Document;
+
+import org.openntf.xpt.core.base.BaseIntegerBinder;
+import org.openntf.xpt.core.dss.binding.Definition;
+import org.openntf.xpt.core.dss.binding.IBinder;
 
 public class IntBinder extends BaseIntegerBinder implements IBinder<Integer> {
 
 	private static IntBinder m_Binder;
 
-	public void processDomino2Java(Document docCurrent, Object objCurrent, String strNotesField, String strJavaField, HashMap<String, Object> addValues) {
+	public void processDomino2Java(Document docCurrent, Object objCurrent, Vector<?> vecCurrent, Definition def) {
 		try {
-			Method mt = objCurrent.getClass().getMethod("set" + strJavaField, Integer.TYPE);
-			Integer nValue = getValueFromStore(docCurrent, strNotesField, addValues);
+			Method mt = objCurrent.getClass().getMethod("set" + def.getJavaField(), Integer.TYPE);
+			Integer nValue = getValueFromStore(docCurrent, vecCurrent, def);
 			if (nValue != null) {
 				mt.invoke(objCurrent, nValue.intValue());
 			}
@@ -37,14 +39,14 @@ public class IntBinder extends BaseIntegerBinder implements IBinder<Integer> {
 		}
 	}
 
-	public Integer[] processJava2Domino(Document docCurrent, Object objCurrent, String strNotesField, String strJavaField, HashMap<String, Object> addValues) {
+	public Integer[] processJava2Domino(Document docCurrent, Object objCurrent, Definition def) {
 		Integer[] nRC = new Integer[2];
 		try {
-			int nValueOld = getValueFromStore(docCurrent, strNotesField, addValues);
-			int nValue = getValue(objCurrent, strJavaField).intValue();
+			int nValueOld = getValueFromStore(docCurrent, docCurrent.getItemValue(def.getNotesField()), def);
+			int nValue = getValue(objCurrent, def.getJavaField()).intValue();
 			nRC[0] = nValueOld;
 			nRC[1] = nValue;
-			docCurrent.replaceItemValue(strNotesField, nValue);
+			docCurrent.replaceItemValue(def.getNotesField(), nValue);
 		} catch (Exception e) {
 		}
 		return nRC;
@@ -62,11 +64,10 @@ public class IntBinder extends BaseIntegerBinder implements IBinder<Integer> {
 	}
 
 	@Override
-	public Integer getValueFromStore(Document docCurrent, String strNotesField, HashMap<String, Object> additionalValues) {
-		try {
-			int nValue = docCurrent.getItemValueInteger(strNotesField);
-			return new Integer(nValue);
-		} catch (Exception e) {
+	public Integer getValueFromStore(Document docCurrent, Vector<?> vecCurrent, Definition def) {
+		if (!vecCurrent.isEmpty()) {
+			Double dblValue = (Double) vecCurrent.get(0);
+			return Integer.valueOf(dblValue.intValue());
 		}
 		return null;
 	}
